networking/auth-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-http
  namespace: default
spec:
  hosts:
  - auth.woaisok8s.com
  gateways:
  - istio-system/istio-int-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: keycloak
