networking/prometheus-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-http
  namespace: monitoring
spec:
  hosts:
  - prometheus.woaisok8s.com
  gateways:
  - https-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9090
        host: prometheus-operated

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-https
  namespace: monitoring
spec:
  hosts:
  - prometheus.woaisok8s.com
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9090
        host: prometheus-operated
